# AtilCalculator

./: .gitignore  CHANGELOG.md  CLAUDE.md.tmpl  LICENSE  README.md  TEMPLATE-README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: architect.md  architect.md.tmpl  developer.md  developer.md.tmpl  orchestrator.md  orchestrator.md.tmpl  product-manager.md  product-manager.md.tmpl  tester.md  tester.md.tmpl
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml
.github/workflows/: ai-pr-review.yml  ci.yml  cross-repo-close.yml  deploy.yml  label-check.yml  label-cleanup.yml  lint-and-test.yml  post-squash.yml  secret-canary.yml  status-label-to-board.yml
docs/: CLAUDE.md  OPERATIONS.md  TROUBLESHOOTING.md  USER-GUIDE.md  backlog.json  index-cadence.md  peer-poke-spec.md  tech-debt.md
docs/backlog/: PM-DISPATCH-PROTOCOL.md  STORY-007.md  STORY-008.md  STORY-009.md  STORY-010.md  STORY-011.md  STORY-012.md  STORY-013.md  STORY-014.md  STORY-016.md  STORY-017.md  STORY-019.md  STORY-022.md  STORY-023.md  STORY-CLI-001.md  STORY-CLI-002.md  STORY-CLI-003.md  STORY-S21-001.md  STORY-S21-002.md  STORY-S21-003.md  STORY-S21-004.md  STORY-S21-005.md  STORY-S21-006.md  STORY-S21-007.md  STORY-S21-008.md  STORY-S21-009.md  STORY-S21-010.md  STORY-S21-011.md  STORY-S21-012.md  STORY-S21-013.md  STORY-S21-014.md  STORY-S21-015.md  STORY-S21-016.md  STORY-S21-017.md  STORY-S21-018.md  STORY-S21-019.md  STORY-S21-020.md  STORY-S21-021.md  STORY-S21-022.md  STORY-S21-023.md  (+2 more)
docs/decisions/: ADR-0002-autonomy-loop.md  ADR-0012-required-label-set.md  ADR-0014-project-token-secret.md  ADR-0016-public-by-default.md  ADR-0017-tech-stack.md  ADR-0018-front-end-framework.md  ADR-0019-amendment-2-decimal-and-envelope.md  ADR-0019-amendment-3-lazy-import-and-self-hosted-multiplier.md  ADR-0019-amendment-4-conftest-env-var-precedence.md  ADR-0019-amendment-5-evaluate-persist-env-var-gate.md  ADR-0019-api-contract.md  ADR-0020-label-mutation-transactionality.md  ADR-0021-docs-pr-convention.md  ADR-0022-persistence-layer.md  ADR-0023-frontend-architecture.md  ADR-0024-amendment-auto-verdict-by-hook.md  ADR-0025-bound-standby-exception.md  ADR-0026-queue-empty-mention-check.md  ADR-0027-deploy-automation.md  ADR-0030-self-hosted-runner-lan-deploy.md  ADR-0031-owner-override-doctrine.md  ADR-0032-rca-18-dedup-buffer-pollution.md  ADR-0033-auto-ping-dual-channel.md  ADR-0036-status-transition-wake.md  ADR-0037-proactive-gap-scan.md  ADR-0038-amendment-watcher-enforcement.md  ADR-0038-amendment-workstream-awareness.md  ADR-0038-auto-claim-protocol.md  ADR-0041-orchestrator-role.md  ADR-0044-verdict-by-scope-clarification.md  ADR-0046-load-bearing-adr-implementation-guide.md  ADR-0047-cross-repo-watcher.md  ADR-0048-amendment-3-initial-trigger-verdict-state-guard.md  ADR-0048-amendment-initial-add-defensive-guard.md  ADR-0048-amendment-verdict-state-aware.md  ADR-0048-status-ready-auto-add-gating.md  ADR-0049-amendment-subcheck-k.md  ADR-0049-behavioral-workflow-test-framework.md  ADR-0051-engine-perf-flake-vs-regression.md  ADR-0052-ci-rerun-race-codification.md  (+9 more)
docs/designs/: AUTO-CLAIM-PROTOCOL-design.md  ISSUE-094-watcher-self-cc-skip.md  ISSUE-425-design.md  SOUL-PATCH-FORBIDDEN-STANDBY-MODES.md  STORY-005-design.md  STORY-008-impl-design.md  STORY-193-design.md  STORY-AUTO-REVERT-FIX-design.md  STORY-P1-1-cluster-lag-detector-design.md  STORY-S18-001-ac-mapping-verification-design.md  d054-closes-anchor-strict-format-design.md  d055-d056-design.md  stack-candidates.md
docs/ops/: vm-hardening.md
docs/product/: ONBOARDING.md  personas.md  vision.md
docs/proposals/: 238-agent-watch-heartbeat-and-wake-nudge-patch.md  238-d028-regression-test-spec.md  238-soul-amendment-forbidden-standby-modes.md  CLAUDE-md-no-self-standby-amendment.md  adr-0033-claude-md-amend.md
docs/retros/: retro-008.md  retro-009.md  retro-010.md  retro-011.md
docs/soul-amends/: dispatch-discipline-v2-issue-414.md
docs/test-plans/: DEPLOY-001-tests.md  DEPLOY-002-tests.md  DEPLOY-003-tests.md  STORY-002-tests.md  STORY-003a-tests.md  STORY-003b-tests.md  STORY-007-tests.md  STORY-008-tests.md  STORY-010-tests.md  STORY-011-tests.md  STORY-012-tests.md  STORY-013-tests.md  STORY-019-tests.md  STORY-299-tests.md  STORY-300-tests.md  STORY-301-tests.md  STORY-E2E-DEPLOY-VERIFY-tests.md  STORY-P1-1-F3-TC6-draft.md  STORY-P1-1-tests.md  STORY-S21-001-tests.md  STORY-S21-002-tests.md
scripts/: agent-context-monitor.sh  agent-state.sh  agent-wake.sh  agent-watch-verdicts.sh  agent-watch.sh  audit-project-refs.sh  bootstrap-project-board.sh  claim-next-ready.sh  cross-repo-close.sh  cross-repo-scan.sh  d031-recovery-scan.sh  deploy-runner.sh  dev-studio-init.sh  init-template-repo.sh  notify.sh  orchestrator-gap-scan.sh  orchestrator-status-flip.sh  peer-poke.sh  ping.sh  post-restart-label-guard.sh  proactive-board-scan.sh  restart-stable.txt  run-server.sh  status-action-driver.sh  wip-idle-detect.sh
scripts/install/: install-git-hooks.sh
scripts/kickoff/: architect.txt  developer.txt  orchestrator.txt  product-manager.txt  tester.txt
scripts/ops/: apply-vm-hardening.sh
scripts/post-squash/: cluster-lag-detector.sh
scripts/tests/: INDEX.md  ci-detects-pyproject.sh  d006-stable-event-ids.sh  d007-api-observability.sh  d011-status-action-driver.sh  d012-stale-verdict-schema.sh  d013-issue-assigneeship-authority.sh  d014-rca-9-preflight-venv-create.sh  d016-rca-11-runtime-deps-explicit.sh  d017-rca-12-cross-user-port-8000.sh  d018-rca-14-uvicorn-orphan-kill.sh  d019-e2e-deploy-verify.sh  d022-proactive-board-detections.sh  d023-rca18-buffer-ttl.sh  d024-agent-wake.sh  d026-layer3-open-only-fire.sh  d028-no-standby.sh  d029-no-standby-watcher-text.sh  d030-cmd-set-quoting-guard.sh  d031-claim-next-ready-stub.sh  d031-claim-next-ready.sh  d031-recovery-scan.sh  d032-rca-19-status-transition-wake.sh  d034-proactive-wip-idle.sh  d035-cross-repo-close.sh  d036-pr-verdict-detect.sh  d036-state-dedup-ring.sh  (+78 more)
systemd/: dev-studio-context-monitor@.service
tests/: __init__.py  conftest.py  test_changelog.py
(+158 files in other folders)
