[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atilcalc"
version = "0.1.0"
description = "AtilCalculator — keyboard-first web calculator with decimal-precision arithmetic"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies: stdlib-only by design (ADR-0017 §engine ↔ UI separation).
# The engine module must have ZERO non-stdlib imports to keep the boundary
# load-bearing and the test surface tight.
#
# Exception: mpmath is the documented carve-out for STORY-011 transcendental
# functions (ADR-0019 amendment 2 §Transcendental precision model). It is
# pinned EXACTLY per ADR-0017 doctrine (no floating pins).
#
# Note: ``dependencies`` is placed BEFORE ``authors``, ``keywords``, and
# ``classifiers`` because the TDD red contract test in
# tests/engine/test_mpmath_pin.py uses a regex with a ``not-bracket``
# character class that does not span across bracket characters
# (those multi-line and inline-list fields contain bracket characters
# that would break the regex).
dependencies = [
    "mpmath==1.3.0",
]

authors = [
    { name = "Atil Can", email = "atilcan06@gmail.com" },
]
keywords = ["calculator", "decimal", "precision", "keyboard-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# STORY-316 / Issue #316 — installable `atilcalc` console-script entry.
#
# Per ADR-0017 §Tech stack, the CLI scaffolding is `typer` (declarative, type-hint
# driven). Per PR #306 (STORY-CLI-001), the canonical entry point for the CLI is
# `atilcalc.cli.main(argv)` — a stdlib-argparse implementation (rationale: keep
# CLI surface stdlib-only by inheritance from the engine per ADR-0017 §engine ↔ UI
# separation; typer can be swapped in later if/when subcommands in REPL mode need
# it — see PR #318 REPL impl for the current decision).
#
# Contract:
#   `pip install atilcalc` (or `pip install -e .[dev]` in dev) creates an
#   `atilcalc` console-script on PATH. Regression tests:
#     - scripts/tests/d036d-cli-console-script.sh (hermetic, pyproject.toml contract)
#     - tests/cli/test_console_script.py (pytest, install + behavior sister)
#
# Why this matters: currently the only invocation path is `python -m atilcalc`
# (via src/atilcalc/__main__.py). For a user-facing CLI in Sprint 7+ (first
# user-facing sprint per #302), `atilcalc <expr>` must work post-pip-install.
[project.scripts]
atilcalc = "atilcalc.cli:main"

[project.optional-dependencies]
# Sprint 3 P0 RCA-11 fix (Issue #164) — split the dev/deps into two groups:
#
#   `web` — PROD RUNTIME SURFACE (single source of truth for prod server pins).
#           Pinned EXACT per ADR-0017 doctrine. deploy-runner.sh installs this
#           via `uv pip install -e ".[web]"` (Option B per Issue #164; AP-23c
#           "exactly one place" probe enforces this — pins in EXACTLY ONE place:
#           pyproject.toml [web] extra, NOT duplicated in deploy-runner.sh).
#
#   `dev` — DEV TOOLING (test surface, lint, type check, E2E). Not installed
#           in production. FastAPI + uvicorn listed WITHOUT pins here because:
#           (a) the version is already pinned in [web] — no need to repeat,
#           (b) dev tooling uses pip's resolver to pick a compatible version
#               at install time (avoids AP-23c duplicate-pinning probe),
#           (c) drift between [web] and [dev] is acceptable for dev tooling
#               (test client doesn't run in prod).
web = [
    # STORY-003a HTTP surface (ADR-0017, ADR-0019). Pinned exact per doctrine.
    # Runtime surface is FastAPI + uvicorn; TestClient backend is httpx.
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
]

# Dev deps pinned per doctrine ("Pin dependency versions exactly when adding new libs").
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.13.0",
    # STORY-003a HTTP surface — dev tooling uses unpinned fastapi/uvicorn.
    # Pinned in [web] above (single source of truth per AP-23c); here we list
    # the package name only so the dev tooling (TestClient, httpx test backend)
    # gets a compatible version via pip's resolver. Drift vs [web] acceptable
    # for dev tooling (not prod surface). See AP-23c rationale in
    # docs/test-plans/DEPLOY-001-tests.md.
    "fastapi",
    "httpx==0.27.2",
    "uvicorn[standard]",
    # STORY-003b E2E (AC4). Playwright pinned per doctrine; browser
    # download via `playwright install chromium` is a one-time setup step
    # documented in README, NOT run in CI (too slow + brittle).
    "playwright==1.49.0",
    "pytest-playwright==0.7.0",
]

[project.urls]
Homepage = "https://github.com/atilcan65/AtilCalculator"
Issues = "https://github.com/atilcan65/AtilCalculator/issues"

# ============================================================================
# Tooling configuration
# ============================================================================

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ----------------------------------------------------------------------------
# pytest configuration
# ----------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",                  # show summary of all fails/short info
    "--strict-markers",     # fail on unknown markers
    "--strict-config",      # fail on unknown config keys
    "--showlocals",         # show local vars in tracebacks
    "--tb=short",           # shorter traceback format
    # STORY-299 TDD RED doctrine: tests/cli/ contains RED tests for the
    # not-yet-implemented CLI surface (Issue #299). They live in the repo
    # for local runnability (`pytest tests/cli/test_basic_arithmetic.py -v`)
    # but MUST NOT fail default CI runs. Explicit `pytest tests/cli/...`
    # still works (path arg overrides --ignore).
    # Same pattern to apply to d036b (precedence) + d036c (REPL) per tester
    # round-2 verdict 2026-06-23T16:37Z.
    "--ignore=tests/cli",
]
testpaths = ["tests"]
pythonpath = ["src"]
# Mirror src/ layout per ADR-0017 §Repository layout.
# Tests for src/atilcalc/engine live in tests/engine/.
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external resources)",
]

# ----------------------------------------------------------------------------
# coverage configuration (pytest-cov)
# ----------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["src/atilcalc"]
omit = [
    "src/atilcalc/__init__.py",
    "src/atilcalc/*/__init__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
# STORY-002 AC8: ≥90% line coverage on src/atilcalc/engine/
fail_under = 90

# ----------------------------------------------------------------------------
# ruff configuration (lint + format)
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Engine is stdlib-only; we can be aggressive on lint.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (formatter handles)
    "B008",  # function call in default argument (used in FastAPI patterns, not engine)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow `assert` in tests (pytest convention)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ----------------------------------------------------------------------------
# mypy configuration
# ----------------------------------------------------------------------------

# Per ADR-0017 §Concrete stack: mypy --strict on engine module only.
# cli/ and api/ stay permissive (Typer decorator magic, FastAPI pydantic models).
# The boundary is enforced by [[tool.mypy.overrides]] per-module.

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
# Global defaults are permissive; engine module opts in to strict.
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
# Engine module: strict typing (load-bearing per ADR-0017)
module = ["atilcalc.engine", "atilcalc.engine.*"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_explicit = true
no_implicit_reexport = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Tests can be untyped (pytest fixtures are dynamic)
module = ["tests.*"]
check_untyped_defs = true
disallow_untyped_defs = false
